# blackjack

./: .gitignore  CACHE_FIX_SUMMARY.md  CODE_REVIEW.md  NEXT_STEPS.md  PHASE2_JAVASCRIPT_MIGRATION.md  PHASE2_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  STATUS.md  TESTING.md  blackjack-config.toml  blackjack.toml  desk.bill  game.js  http.rs.fixed  index.html  server.py  style.css
blackjack/: Cargo.toml  README.md  TX_DRIVER.md  blackjack-config.toml  out.jam
blackjack/hoon/app/: app.hoon
blackjack/hoon/app/site/: game.js  style.css  wallet.css  wallet.html  wallet.js  watcher.css  watcher.html  watcher.js
blackjack/hoon/apps/dumbnet/: inner.hoon
blackjack/hoon/apps/wallet/: wallet.hoon
blackjack/hoon/apps/wallet/lib/: tx-builder-v1.hoon  types.hoon  utils.hoon
blackjack/hoon/common/: tx-engine-1.hoon  tx-engine.hoon
blackjack/hoon/jams/: BUILD.bazel
blackjack/hoon/lib/: blackjack-static.hoon  blackjack.hoon
blackjack/src/: lib.rs  main.rs  tx_driver.rs
docs/archive/: NOCKAPP_DEPLOYMENT.md  PHASE2_COMPLETE.md
hoon/app/: blackjack.hoon
hoon/lib/: blackjack-game.hoon  blackjack-static.hoon
hoon/sur/: blackjack.hoon
