[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"
authors = ["N. E. Davis <neal@zorp.io>"]
description = "A NockApp project"

[[bin]]
name = "blackjack"
path = "src/main.rs"

[dependencies]
# NockVM dependency
nockapp = { git = "https://github.com/sigilante/nockchain.git", rev = "040091fcf36bbe64bb40c84ce3c3651991b5ad70" }
nockvm = { git = "https://github.com/sigilante/nockchain.git", rev = "040091fcf36bbe64bb40c84ce3c3651991b5ad70" }
nockvm_macros = { git = "https://github.com/sigilante/nockchain.git", rev = "040091fcf36bbe64bb40c84ce3c3651991b5ad70" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
] }
tokio-util = "0.7.11"

[build-dependencies]
# Build script dependencies if needed